adiciona o resto do CRUD de categorias
