# src/routes/categories.routes.js
@@ -5,7 +5,10 @@ const router = express.Router();
 
 router
     .get('/api/categories', CategoryController.findCategorias)
-    .get('/api/categories/:id', CategoryController.findById)
-    .post('/api/admin/categories', CategoryController.createCategoria);
+    .get('/api/categories/:id', CategoryController.findCategoriaById)
+    .post('/api/admin/categories', CategoryController.createCategoria)
+    .put('/api/admin/categories/update/:id', CategoryController.updateCategoria)
+    .put('/api/admin/categories/active/:id', CategoryController.activeCategoria)
+    .delete('/api/admin/categories/remove/:id', CategoryController.deleteCategoria);
 
 export default router;
